--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "students-keeper-app-part-1-starting-forked",
   "version": "1.0.0",
-  "proxy": "http://localhost:3000",
+  "proxy": "https://keeper-production.up.railway.app",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
