--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-BACKEND_URL = "https://keeper-production.up.railway.app"
+BACKEND_URL = https://keeper-production.up.railway.app
+DATABASE_URL = mongodb+srv://jihan:GsfcvP8m@final.s9bt10i.mongodb.net/?retryWrites=true&w=majority
